--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,14 @@
-name: hello-world
+name: hello world
 on: push
 jobs:
   my-job:
-    runs-on: ubuntu-latest
-    steps:
-      - name: my-step
-        run: echo "hello world!"
+     runs-on: ubuntu-latest
+     steps:
+     - name: my-step
+       run: echo "hello world"
+  second:
+   needs: my-job
+   runs-on: ubuntu-latest
+   steps:
+     - name: step2
+       run: echo "secoond job"
